# ChangeLog for dev-python/django-timezone-field
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*django-timezone-field-1.2 (07 Apr 2015)

  07 Apr 2015; Johann Schmitz <ercpe@gentoo.org>
  +django-timezone-field-1.2.ebuild, -django-timezone-field-1.1.ebuild:
  Version bump of django-timezone-field

*django-timezone-field-1.1 (04 Jan 2015)

  04 Jan 2015; Johann Schmitz <ercpe@gentoo.org>
  +django-timezone-field-1.1.ebuild, +metadata.xml:
  New ebuild for django-timezone-field